feat: Enhance testimonial and subcategory management with mappers; add validation and error handling for image uploads; improve DTO to entity mapping